# StepperMotors_Qt

./: .gitignore  CMakeLists.txt  arduino.cpp  arduino.h  arduinoserialport.cpp  arduinoserialport.h  baudratecombobox.cpp  baudratecombobox.h  mainwindow.cpp  mainwindow.h  mainwindow_ui.cpp  mainwindow_ui.h  portnamecombobox.cpp  portnamecombobox.h  serialport.cpp  serialport.h  toggledpushbutton.h
params/: config.ini  parameters.ini
src/: common.h  main.cpp  metricprefix.cpp  metricprefix.h
src/connection/: arduino.cpp  arduino.h  arduinoparameters.cpp  arduinoparameters.h  arduinoserialport.cpp  arduinoserialport.h  arduinowithsteppers.cpp  arduinowithsteppers.h  serialport.cpp  serialport.h
src/ui/: debugwindow_ui.cpp  debugwindow_ui.h  mainwindow_ui.cpp  mainwindow_ui.h
src/widgets/: arduinodebugconsole.h  arduinometerdoublespinbox.h  baudratecombobox.cpp  baudratecombobox.h  debugconsole.cpp  debugconsole.h  debugwindow.cpp  debugwindow.h  dimensionaldoublespinbox.cpp  dimensionaldoublespinbox.h  distancevaluewidget.cpp  distancevaluewidget.h  knobpushbutton.cpp  knobpushbutton.h  knobwidget.cpp  knobwidget.h  maintoolbar.cpp  maintoolbar.h  mainwindow.cpp  mainwindow.h  meterdoublespinbox.h  movetrackerwidget.cpp  movetrackerwidget.h  portnamecombobox.cpp  portnamecombobox.h  positionlabel.cpp  positionlabel.h  tilewidget.cpp  tilewidget.h  toggledpushbutton.cpp  toggledpushbutton.h
src/wrappers/: arithmetic.h  inifile.cpp  inifile.h  inifilestorage.cpp  inifilestorage.h  limiter.h  sectionsmap.h  shortcutmanager.h  widgetsettings.cpp  widgetsettings.h
